# LiveVisionKit

./: .gitignore  CMakeLists.txt  README.md
LiveVisionKit/: .gitignore  CMakeLists.txt  Directives.cpp  Directives.hpp  LiveVisionKit.hpp  Module.cpp
LiveVisionKit/Algorithms/: Image.cpp  Image.hpp  Logic.hpp  Logic.tpp  Math.hpp  Math.tpp  Text.tpp
LiveVisionKit/Algorithms/OpenCL/: FSR.cl  Kernels.cpp  Kernels.hpp
LiveVisionKit/Control/Timing/: Stopwatch.hpp  Ticker.hpp  Time.hpp
LiveVisionKit/Data/: Iterators.hpp  Iterators.tpp  SpatialMap.hpp  SpatialMap.tpp  StreamBuffer.hpp  StreamBuffer.tpp  VideoFrame.cpp  VideoFrame.hpp
LiveVisionKit/Diagnostics/: Assert.hpp  Assert.tpp  Directives.cpp  Directives.hpp
LiveVisionKit/Diagnostics/Logging/: CSVLogger.cpp  CSVLogger.hpp  Logger.hpp  Logger.tpp
LiveVisionKit/Filters/: CompositeFilter.cpp  CompositeFilter.hpp  ConversionFilter.cpp  ConversionFilter.hpp  DeblockingFilter.cpp  DeblockingFilter.hpp  ScalingFilter.cpp  ScalingFilter.hpp  StabilizationFilter.cpp  StabilizationFilter.hpp  VideoFilter.cpp  VideoFilter.hpp  VideoFrame.cpp  VideoFrame.hpp
LiveVisionKit/Functions/: Container.hpp  Container.tpp  Drawing.hpp  Drawing.tpp  Extensions.cpp  Extensions.hpp  Image.cpp  Image.hpp  Logic.hpp  Logic.tpp  Math.hpp  Math.tpp  Text.hpp
LiveVisionKit/Functions/OpenCL/: Drawing.cl  FSR.cl  Kernels.cpp  Kernels.hpp
LiveVisionKit/Functions/OpenCL/Sources/: Drawing.cl  FSR.cl
LiveVisionKit/Logging/: CSVLogger.hpp  Logger.hpp  Logger.tpp
LiveVisionKit/Math/: BoundingBox.cpp  BoundingBox.hpp  BoundingQuad.cpp  BoundingQuad.hpp  Homography.cpp  Homography.hpp  Logic.hpp  Logic.tpp  Math.hpp  Math.tpp  Transform.cpp  Transform.hpp  VirtualGrid.cpp  VirtualGrid.hpp  WarpField.cpp  WarpField.hpp  WarpMesh.cpp  WarpMesh.hpp
LiveVisionKit/OBS/Data/locale/: en-GB.ini  en-US.ini  es-ES.ini
LiveVisionKit/OBS/Effects/: CASEffect.cpp  CASEffect.hpp  DefaultEffect.cpp  DefaultEffect.hpp  FSREffect.cpp  FSREffect.hpp  OBSEffect.hpp  OBSEffect.tpp
LiveVisionKit/OBS/Interop/: FrameBuffer.cpp  FrameBuffer.hpp  FrameIngest.cpp  FrameIngest.hpp  InteropContext.cpp  InteropContext.hpp  OBSDispatch.hpp  OBSDispatch.tpp  OBSEffect.hpp  OBSEffect.tpp  VisionFilter.cpp  VisionFilter.hpp
LiveVisionKit/OBS/Plugin/: Module.cpp
LiveVisionKit/OBS/Plugin/Effects/: CASEffect.cpp  CASEffect.hpp  DefaultEffect.cpp  DefaultEffect.hpp  FSREffect.cpp  cas.effect  fsr.effect
LiveVisionKit/OBS/Plugin/Enhancement/: ADBFilter.cpp  ADBFilter.hpp  ADBSource.cpp  CASFilter.cpp  CASFilter.hpp  CASSource.cpp  LCFilter.cpp  LCFilter.hpp  LCSource.cpp
LiveVisionKit/OBS/Plugin/Scaling/: FSREffect.cpp  FSREffect.hpp  FSRFilter.cpp  FSRFilter.hpp  FSRSource.cpp
LiveVisionKit/OBS/Plugin/Stabilisation/: VSFilter.cpp  VSFilter.hpp  VSSource.cpp
LiveVisionKit/OBS/Utility/: Graphics.cpp  Graphics.hpp  Locale.hpp  Logging.hpp  Logging.tpp  OBSDispatch.tpp
LiveVisionKit/Plugin/: Module.cpp  test.cpp
LiveVisionKit/Plugin/Effects/: cas.effect  cas_glsl.effect  ffx_a_mod.h  ffx_cas_mod.h  ffx_fsr1_mod.h  fsr.effect  vs.effect
LiveVisionKit/Plugin/Enhancement/: ADBFilter.cpp  ADBFilter.hpp  ADBSource.cpp  ADNFilter.cpp  ADNFilter.hpp  ADNSource.cpp  CASFilter.cpp  CASFilter.hpp  CASSource.cpp
LiveVisionKit/Plugin/Scaling/: FSRFilter.cpp  FSRFilter.hpp  FSRSource.cpp
LiveVisionKit/Plugin/Stabilisation/: VSFilter.cpp  VSFilter.hpp  VSSource.cpp
LiveVisionKit/Scaling/: FSRFilter.cpp  FSRFilter.hpp  FSRPlugin.cpp
LiveVisionKit/Scaling/Effects/: ffx_a_mod.h  ffx_fsr1_mod.h  fsr.effect
LiveVisionKit/Structures/: CircularBuffer.hpp  Iterators.tpp  SlidingBuffer.hpp  SlidingBuffer.tpp  SpatialMap.hpp  SpatialMap.tpp  StreamBuffer.hpp  StreamBuffer.tpp
LiveVisionKit/Timing/: Stopwatch.cpp  Stopwatch.hpp  TickTimer.hpp  Ticker.cpp  Time.cpp
LiveVisionKit/Upscale/: FSRFilter.cpp  FSRFilter.hpp  FSRPlugin.cpp
LiveVisionKit/Upscale/Effects/: ffx_a_pruned.h  ffx_fsr1_pruned.h  fsr.effect
LiveVisionKit/Utility/: Algorithm.hpp  Algorithm.tpp  Configurable.tpp  Drawing.hpp  Drawing.tpp  Math.hpp  Math.tpp  Unique.hpp  Unique.tpp
LiveVisionKit/Utility/Data/: Unique.hpp  Unique.tpp
LiveVisionKit/Utility/Properties/: Configurable.hpp  Configurable.tpp  Unique.tpp
LiveVisionKit/Utility/Timing/: Stopwatch.cpp  Stopwatch.hpp  TickTimer.cpp  TickTimer.hpp  Time.cpp  Time.hpp
LiveVisionKit/Vision/: CameraCalibrator.cpp  CameraCalibrator.hpp  FeatureDetector.cpp  FeatureDetector.hpp  FrameIngest.cpp  FrameIngest.hpp  FrameTracker.cpp  FrameTracker.hpp  GridDetector.cpp  GridDetector.hpp  PathSmoother.cpp  PathSmoother.hpp  PathStabilizer.cpp  PathStabilizer.hpp  TrackingGrid.cpp  TrackingGrid.hpp  Transform.cpp  Transform.hpp
LiveVisionKit/Vision/Camera/: CameraCalibrator.cpp
LiveVisionKit/Vision/Tracking/: FrameTracker.cpp  FrameTracker.hpp  GridDetector.cpp  GridDetector.hpp  PathStabilizer.cpp  PathStabilizer.hpp  WarpField.cpp  WarpField.hpp
Modules/LVK-Processor/: Application.cpp  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.hpp  FilterParser.hpp  FilterParser.tpp  OptionParser.hpp  OptionParser.tpp  VideoIOConfiguration.cpp  VideoIOConfiguration.hpp  VideoProcessor.cpp  VideoProcessor.hpp  lvk.cpp
Modules/OBS-Plugin/: CMakeLists.txt
Modules/OBS-Plugin/Effects/: CASEffect.cpp  CASEffect.hpp  DefaultEffect.cpp  FSREffect.cpp  FSREffect.hpp  OBSEffect.hpp  OBSEffect.tpp
Modules/OBS-Plugin/Interop/: FrameBuffer.cpp  FrameBuffer.hpp  FrameIngest.cpp  FrameIngest.hpp  InteropContext.cpp  InteropContext.hpp  OBSFrame.cpp  OBSFrame.hpp  VisionFilter.cpp  VisionFilter.hpp
Modules/OBS-Plugin/Modules/: Module.cpp
Modules/OBS-Plugin/Sources/: Module.cpp
Modules/OBS-Plugin/Utility/: Graphics.cpp  Graphics.hpp  Locale.hpp  Logging.hpp  Logging.tpp  OBSDispatch.hpp  OBSDispatch.tpp  ScopedProfiler.cpp  ScopedProfiler.hpp
Modules/VideoEditor/: Application.cpp  CMakeLists.txt  ConsoleLogger.hpp  FilterParser.hpp  FilterParser.tpp  OptionParser.hpp  OptionParser.tpp  VideoIOConfiguration.cpp  VideoIOConfiguration.hpp  VideoProcessor.cpp
(+67 files in other folders)
